cambiando DevDependecies a depedencias, para que las tome heroku

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.7"
-  }
+    "nodemon": "^2.0.7"},
+  "devDependencies": {}
 }
